# python-gconf

./: ChangeLog  ChangeLog.pre-2-0  Makefile.am  Makefile.in  NEWS  PKG-INFO  PKG-INFO.in  README  aclocal.m4  config.h.in  configure  configure.ac  gnome-python-2.0.pc.in  gnome-python.spec  gnome-python.spec.in  setup.py
bonobo/: Makefile.am  Makefile.in  activationmodule.c  bonobo-arg.c  bonobo.override  bonobomodule.c  bonoboui.override  bonobouimodule.c  pybonobo.c  pybonobo.h
debian/: changelog  control  control.in  rules  watch
debian/patches/: 0001-Remove-GNOME_COMMON_INIT.patch  series
docs/: Makefile.am  Makefile.in
docs/gnomevfs/: Makefile.am  Makefile.in  gnomevfs-classes.xml  gnomevfs-constants.xml  gnomevfs-functions.xml
docs/gnomevfs/html/: class-gnomevfs-context.html  class-gnomevfs-directoryhandle.html  class-gnomevfs-drive.html  class-gnomevfs-fileinfo.html  class-gnomevfs-handle.html  class-gnomevfs-uri.html  class-gnomevfs-volume.html  gnomevfs-class-reference.html  gnomevfs-constants.html  gnomevfs-functions.html  index.html  pygnomevfs.devhelp
examples/popt/: goption.py
gconf/: Makefile.am  Makefile.in  gconf-fixes.c  gconf-types.c  gconf-types.h  gconf.override
gnome/: Makefile.am  Makefile.in  gnome.override  gnomemodule.c  ui.override  uimodule.c
gnomecanvas/: Makefile.am  Makefile.in  canvas.override  canvasmodule.c
gnomevfs/: Makefile.am  Makefile.in  gnome-vfs-python-method.c  pygnomevfs-private.h  vfs-async-handle.c  vfs-context.c  vfs-dir-handle.c  vfs-drive.c  vfs-file-info.c  vfs-handle.c  vfs-uri.c  vfs-volume-monitor.c  vfs-volume.c  vfs-xfer-progress-info.c  vfsbonobomodule.c  vfsmodule.c
tests/: Makefile.am  Makefile.in  common.py  testbonobo.py  testgnome.py  testvfs.py
