REFERENCE_MAIN_FILE = $(srcdir)/gnomevfs-classes.xml
REFERENCE_DOC_NAME = pygnomevfs
DOC_MODULE = pygnomevfs

REFERENCE_XML_FILES =				\
	$(srcdir)/gnomevfs-classes.xml		\
	$(srcdir)/gnomevfs-constants.xml	\
	$(srcdir)/gnomevfs-context.xml		\
	$(srcdir)/gnomevfs-directoryhandle.xml	\
	$(srcdir)/gnomevfs-drive.xml		\
	$(srcdir)/gnomevfs-fileinfo.xml		\
	$(srcdir)/gnomevfs-functions.xml	\
	$(srcdir)/gnomevfs-handle.xml		\
	$(srcdir)/gnomevfs-uri.xml		\
	$(srcdir)/gnomevfs-volume.xml

include $(top_srcdir)/docs/pygtk-ref-docs.make

EXTRA_DIST += wscript

